--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,24 @@
-<form action="/">
-<label for="fname">First name: </label>
-<input type="text" id="lname" name="lname"><br><br>
-<input type="submit" value="Submit">
-</form> 
+<html>
+<body>	 
+	<form action = "#" method="post">
+		
+
+<p>Enter Name:</p>
+
+
+		
+
+<input type = "text"  name = "nm" />
+
+
+		
+
+<p><input type = "submit" value = "submit" /></p>
+
+
+	</form>	
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %} 
+</body>
+</html>
